# lec-materials

./: lec10
lec01/: lines.c
lec01/hello_world/: Cargo.toml
lec01/lines/: Cargo.toml  lines.c
lec01/optional/: optional.cpp  optional.py  optional.rs
lec02/experimentation/: Cargo.toml  foo.c
lec02/getting_started/: Cargo.toml
lec02/optional/: Option.java  optional.c  optional.cpp  optional.go  optional.py
lec02/playing_around/: Cargo.toml
lec03/: Cargo.toml  danger.c
lec03/danger/: Cargo.toml
lec03/demo_with_itertools/: Cargo.toml
lec03/optional/: optional  optional.go  optional.rs
lec03/src/: main.rs  main.rs.old
lec04/: errors.c  foo  foo.c  foo.go  foo.py
lec04/collections/: Cargo.toml
lec04/errors/: Cargo.toml
lec04/rust_stuff/: Cargo.toml
lec05/src/: dangling.rs  exclusive.rs  main.rs  pain.rs  shared.rs  slice.rs
lec06/: Cargo.toml  Foo.java
lec06/playing_around/: Cargo.toml
lec06/src/: dangling.rs  elision.rs  exclusive.rs  longest.rs  main.rs  pain.rs  shared.rs  slice.rs  struct_lifetime.rs
lec07/: Cargo.toml
lec07/modtestdoc/: Cargo.toml
lec07/my_epic_binary/: Cargo.toml
lec07/my_library/: Cargo.toml
lec07/my_slick_lib/: Cargo.toml
lec07/smart_ptrs/: Cargo.toml
lec07/src/: 0_starting_code.rs  1_impl_struct.rs  2_impl_trait.rs  folder_mod_2.rs  lib.rs  main.rs  one_file_module.rs
lec07/tests/: my_integration_test.rs
lec08/: Cargo.toml
lec08/cs6991-impl/: Cargo.toml
lec08/src/: generics.rs  iter.rs  lib.rs  main.rs  one_file_module.rs  traits.rs
lec08/termgame-demo/: Cargo.toml  my_output
lec08/tests/: my_test.rs
lec09/: Cargo.toml
lec09/polymorphism/: Cargo.toml
lec09/src/: generics.rs  iter.rs  main.rs  object.rs  traits.rs  type_parameters.rs
lec10/: create_program
lec10/c/: max.c  sort.c
lec10/rust/: Cargo.toml
lec10/sqlx-demo/: .env
lec11/: Cargo.toml  create_program  create_program.sh  program  program.sh
lec11/c/: a.out  max.c  sort.c  up_to.c
lec11/c_macros/: max.c  sort.c
lec11/rust/: Cargo.toml
lec11/sql-demo/: Cargo.toml
lec11/sql-demo/src/: main.rs
lec11/sqlx-demo/: Cargo.toml  test.db
lec11/sqlx-demo/src/: main.rs
lec11/src/: c_macros.rs  lib.rs  main.rs  rust_macros.rs
lec12/: Cargo.toml  FixRace.java  data_race.c  fix_race.c
lec12/src/: main.rs
lec13/: Cargo.toml  DataRace.java  FixRace.java  data_race.c  data_race.py  fix_race.c
lec14/: Cargo.toml  thread_sum  thread_sum.c
lec15/: Cargo.toml  add.c
lec17/: Cargo.toml
lec17/exam_q2_23T1/: Cargo.toml
lec17/exam_q2_23T1/src/: lib.rs  main.rs  main_alt.rs
lec17/exam_q3_22T3/: Cargo.toml
lec17/exam_q3_22T3/src/: lib.rs  main.rs  main_alt.rs
lec17/exam_q5_23T1/: Cargo.toml
lec17/exam_q5_23T1/src/: closure_easy.rs  closure_hard.rs  fn_ptr_generic.rs  lib.rs  main.rs
lec17/exam_q5_23T3/: Cargo.toml
lec17/exam_q5_23T3/src/: lib.rs  main.rs  main_duration.rs  main_naughty_nice.rs  main_odd_even.rs
lec17/prac_q3/: Cargo.toml
lec17/prac_q3/src/: lib.rs  main_1.rs  main_2.rs
lec18/: Cargo.toml  my_paste.txt
lec18/exam_q6_22T3/src/: main.rs
lec18/exam_q7_22T3/mutex_broken/src/: main.rs
lec18/exam_q8_22T3/: 1-1.txt  10-1.txt  10-2.txt  10-3.txt  3-1.txt  6-1.txt  6-2.txt
lec18/src/: main.rs
uses-lec08/: Cargo.toml
(+143 files in other folders)
