[package]
name = "exam_q5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "exam_q5"

[[bin]]
path = "src/fn_ptr_generic.rs"
name = "exam_q5_fn_ptr_generic"

[[bin]]
path = "src/closure_easy.rs"
name = "exam_q5_closure_easy"

[[bin]]
path = "src/closure_hard.rs"
name = "exam_q5_closure_hard"

[lib]
path = "src/lib.rs"
name = "exam_q5_lib"

[dependencies]
